# torch-cpp-sample

./: CMakeLists.txt
src/: main.cpp
